package seedu.healthbud.command;

public interface Command {
    void execute() throws Exception;
}

